--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Individual Project - Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "sequelize": "^6.21.4"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "sequelize-cli": "^6.4.1"
   }
